<resources>
    <!--<string name="app_name">人卫商城</string>-->
    <string name="app_name">轻量电商</string>
    <!--<string name="app_name">亚信电商</string>-->
    <!-- 通用字符 START-->
    <string name="str_save">保存</string>
    <string name="str_cancel">取消</string>
    <string name="str_confirm">确认</string>
    <string name="str_submit">提交</string>
    <string name="str_search">搜索</string>
    <string name="positive">确定</string>
    <string name="negative">取消</string>
    <string name="str_ok">同意</string>
    <string name="str_finished">完成</string>
    <string name="str_delete">删除</string>
    <string name="str_confirm_delete">确认要删除吗？</string>
    <string name="str_back">返回</string>
    <string name="str_next_step">下一步</string>
    <string name="str_exit">退出</string>
    <string name="str_quit">注销</string>
    <string name="str_quit1">退出当前账号</string>
    <string name="empty">空白</string>
    <!-- 通用字符 END-->
    <!-- 首页 START-->
    <string name="str_searc_goods">搜索商品</string>
    <string name="str_searc_books">搜索图书</string>
    <string name="str_all_classification">分类</string>
    <string name="str_rank">排行榜</string>
    <string name="str_cart">购物车</string>
    <string name="str_personal_center">个人中心</string>
    <string name="str_message">消息</string>
    <string name="str_set">设置</string>
    <string name="str_edit">编辑</string>
    <string name="str_unpaid">待付款</string>
    <string name="str_unsent">待发货</string>
    <string name="str_unreceived">待收货</string>
    <string name="str_uncomment">待评价</string>
    <!-- 首页 END-->
    <item name="tag_aq" type="id" />
    <item name="tag_url" type="id" />
    <item name="tag_width" type="id" />
    <item name="tag_visiable" type="id" />

    <string name="home_footer_nsd">您是第</string>
    <string name="home_footer_wfk">位访客</string>

    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">放开以刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>

    <string name="pull_to_refresh_footer_release_label">放开以加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>
    
    <string name="toast_load_more_msg">没有更多了~</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 时间选择dialog -->
    <string name="picker_sure">确定</string>
    <string name="picker_cancel">取消</string>
    <string name="picker_title">选择时间</string>

    <string name="picker_year">年</string>
    <string name="picker_month">月</string>
    <string name="picker_day">日</string>
    <string name="picker_hour">时</string>
    <string name="picker_minute">分</string>

    <string name="order_date">订单时间：</string>
    <string name="order_code">订单编号：</string>
    <string name="order_price">订单金额：</string>
    <string name="order_detail">订单详情</string>
    <string name="pay_type">支付方式</string>
    <string name="online_pay">在线支付</string>
    <string name="delivery_type">配送方式</string>
    <string name="express">快递</string>
    <string name="express_information">物流信息</string>
    <string name="customer_comment">买家备注</string>
    <string name="invoice_information">发票信息</string>
    <string name="papery_invoice">纸质发票</string>
    <string name="goods_total_price">商品总额</string>
    <string name="return_cash">-返现</string>
    <string name="express_fee">+运费</string>
    <string name="really_pay">实付款：</string>
    <string name="pay_time_remain">付款剩余时间</string>
    <string name="to_pay">去支付</string>
    <string name="cancel_order">取消订单</string>
    <string name="invoice_info">发票信息</string>
    <string name="invoice_type">发票类型</string>
    <string name="normal_invoice">普通发票</string>
    <string name="e_invoice">电子发票</string>
    <string name="value_added_tax_invoice">增值税发票</string>
    <string name="invoice_receiver_info">收票人信息</string>
    <string name="invoice_receiver_title">收票人抬头</string>
    <string name="invoice_receiver_tel">收票人手机</string>
    <string name="invoice_receiver_email">收票人邮箱</string>
    <string name="invoice_title">发票抬头</string>
    <string name="taxpayer_number">纳税人识别号</string>
    <string name="addnum_detail">附加明细</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="invoice_content">发票内容</string>
    <string name="confirm">确定</string>
    <string name="company">单位</string>
    <string name="personal">个人</string>
    <string name="filter_unsigned_number_char">
        0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ
    </string>
</resources>
