<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/red_e9573b"
    android:gravity="center_vertical"
    android:orientation="horizontal">
    <!-- 左部分 Start-->
    <ImageView
        android:id="@+id/title_imageview_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo" />

    <ImageView
        android:id="@+id/title_imageview_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/arrow_left"
        android:paddingRight="5dp" />

    <RelativeLayout
        android:id="@+id/title_layout_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"

        >

        <ImageView
            android:id="@+id/title_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/set" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/title_setting"
            android:text="@string/str_set"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </RelativeLayout>
    <!-- 左部分 End-->
    <!-- 中间部分 Start-->
    <TextView
        android:id="@+id/title_layout_search"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:background="@drawable/shape_round_rectangle_white_no_stroke"
        android:drawableLeft="@drawable/search"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/str_searc_goods"
        android:textColor="@color/gray_969696"
        android:textSize="14sp"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/title_layout_title"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:orientation="horizontal"

        >

        <TextView
            android:id="@+id/title_textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="@dimen/home_textsize" />

    </RelativeLayout>

    <!-- 中间部分 End-->
    <!-- 右部分 Start-->
    <LinearLayout
        android:id="@+id/title_layout_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <ImageView
            android:id="@+id/title_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/message" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/str_message"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/title_textview_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="2dp"
        android:text="@string/str_edit"
        android:textColor="@color/white"
        android:textSize="@dimen/pop_textsize"
        android:visibility="gone" />
    <!-- 右部分 End-->
</LinearLayout>