<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="60dp"
              android:orientation="horizontal"
              android:divider="@drawable/custom_tab_indicator_divider"
              android:showDividers="middle"
            android:background="@color/white"
    >
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/str_unpaid"
        android:padding="10dp"
        android:textSize="@dimen/small_textsize"
        android:layout_gravity="center_vertical"
        >
        <TextView
            android:id="@+id/tv_un_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_unpaid"
            android:textSize="@dimen/title2_textsize"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:background="@drawable/shape_circle_red"
            android:layout_toRightOf="@id/tv_un_pay"
            android:id="@+id/mark_unpay"
            android:visibility="invisible"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/str_unsent"
        android:padding="10dp"
        android:textSize="@dimen/small_textsize"
        android:layout_gravity="center_vertical"
        >
        <TextView
            android:id="@+id/tv_un_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_unsent"
            android:textSize="@dimen/title2_textsize"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:background="@drawable/shape_circle_red"
            android:layout_toRightOf="@id/tv_un_sent"
            android:id="@+id/mark_unsent"
            android:visibility="invisible"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/str_unreceived"
        android:padding="10dp"
        android:textSize="@dimen/small_textsize"
        android:layout_gravity="center_vertical"
        >
        <TextView
            android:id="@+id/tv_un_received"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_unreceived"
            android:textSize="@dimen/title2_textsize"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:background="@drawable/shape_circle_red"
            android:layout_toRightOf="@id/tv_un_received"
            android:id="@+id/mark_unreceived"
            android:visibility="invisible"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/str_uncomment"
        android:textSize="@dimen/small_textsize"
        android:layout_gravity="center_vertical"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/tv_un_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_uncomment"
            android:textSize="@dimen/title2_textsize"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:background="@drawable/shape_circle_red"
            android:layout_toRightOf="@id/tv_un_comment"
            android:id="@+id/mark_uncomment"
            android:visibility="invisible"
            />
    </RelativeLayout>


</LinearLayout>